tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_57.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := p;
               z := x;
               x := 0;
               r := p;
  (* error *)  q := ((x = (z + (p + 1223))) & (((r & r) & (~ q)) & ((q & p) OR p)));
               z := (- (200 DIV (- (y - y))));
               q := (~ (((0 < z) OR (1 <= 200)) & (y = 1223)));
               z := z;
               y := z;
               p := (((1 + z) DIV (y - x)) >= 200)
END Test15.